@@ -22,3 +22,4 @@ Bundle-ActivationPolicy: lazy
 Import-Package: com.google.common.collect;version="15.0.0"
 Bundle-Vendor: %providerName
 Automatic-Module-Name: org.eclipse.sirius.diagram.elk
+Export-Package: org.eclipse.sirius.diagram.elk
