@@ -12,16 +12,13 @@
  *******************************************************************************/
 package org.eclipse.sirius.diagram.ui.internal.layout;
 
-import org.eclipse.emf.ecore.EObject;
 import org.eclipse.gmf.runtime.diagram.ui.editparts.IGraphicalEditPart;
 import org.eclipse.gmf.runtime.diagram.ui.services.layout.AbstractLayoutEditPartProvider;
-import org.eclipse.gmf.runtime.notation.Diagram;
-import org.eclipse.gmf.runtime.notation.View;
 import org.eclipse.sirius.diagram.DDiagram;
 import org.eclipse.sirius.diagram.description.CustomLayoutConfiguration;
 import org.eclipse.sirius.diagram.description.DiagramDescription;
-import org.eclipse.sirius.diagram.description.Layout;
 import org.eclipse.sirius.diagram.ui.api.layout.CustomLayoutAlgorithm;
+import org.eclipse.sirius.diagram.ui.business.api.query.EditPartQuery;
 import org.eclipse.sirius.diagram.ui.provider.DiagramUIPlugin;
 import org.eclipse.sirius.diagram.ui.tools.api.layout.provider.AbstractLayoutProvider;
 import org.eclipse.sirius.diagram.ui.tools.api.layout.provider.CompoundLayoutProvider;
@@ -41,13 +38,14 @@ import org.eclipse.sirius.diagram.ui.tools.internal.layout.provider.PinnedElemen
 public class GenericLayoutProvider implements LayoutProvider {
 
     @Override
-    public AbstractLayoutEditPartProvider getLayoutNodeProvider(final IGraphicalEditPart container) {
-        DefaultLayoutProvider defaultLayoutProvider = getGenericLayoutProvider(container);
+    public AbstractLayoutEditPartProvider getLayoutNodeProvider(final IGraphicalEditPart partToLayout) {
+        DefaultLayoutProvider defaultLayoutProvider = getGenericLayoutProvider(partToLayout);
+
         if (defaultLayoutProvider != null) {
             final CompoundLayoutProvider clp = new CompoundLayoutProvider();
             clp.addProvider(defaultLayoutProvider);
             if (defaultLayoutProvider instanceof ExtendableLayoutProvider) {
-                ExtendableLayoutProvider layoutProvider = (ExtendableLayoutProvider) getGenericLayoutProvider(container);
+                ExtendableLayoutProvider layoutProvider = (ExtendableLayoutProvider) getGenericLayoutProvider(partToLayout);
                 clp.addProvider(new PinnedElementsLayoutProvider(layoutProvider));
             }
 
@@ -65,6 +63,24 @@ public class GenericLayoutProvider implements LayoutProvider {
         return null;
     }
 
+    /**
+     * Return the layout configuration that should be used by the layout algorithm.
+     * 
+     * @param partToLayout
+     *            the part that will be layouted.
+     * @return the layout configuration that should be used by the layout algorithm. Null if no such element exist.
+     */
+    protected CustomLayoutConfiguration getLayoutConfiguration(final IGraphicalEditPart partToLayout) {
+        // we retrieve the layout configuration from the VSM.
+        EditPartQuery editPartQuery = new EditPartQuery(partToLayout);
+        DiagramDescription diagramDescription = editPartQuery.getDiagramDescription();
+        CustomLayoutConfiguration layoutConfiguration = null;
+        if (diagramDescription != null && diagramDescription.getLayout() instanceof CustomLayoutConfiguration) {
+            layoutConfiguration = (CustomLayoutConfiguration) diagramDescription.getLayout();
+        }
+        return layoutConfiguration;
+    }
+
     @Override
     public boolean provides(final IGraphicalEditPart container) {
         return getGenericLayoutProvider(container) != null;
@@ -76,43 +92,22 @@ public class GenericLayoutProvider implements LayoutProvider {
     }
 
     /**
-     * Returns the {@link CustomLayoutConfiguration} associated to the description of the {@link DDiagram} related to
-     * the given part.
-     * 
-     * @param container
-     * @return the {@link CustomLayoutConfiguration} associated to the description of the {@link DDiagram} related to
-     *         the given part. Null if no such element exists.
-     */
-    private CustomLayoutConfiguration getCustomLayoutConfiguration(final IGraphicalEditPart container) {
-        final View view = container.getNotationView();
-        final EObject modelElement = view.getElement();
-        if (view instanceof Diagram && modelElement instanceof DDiagram) {
-            final DDiagram vp = (DDiagram) modelElement;
-            final DiagramDescription desc = vp.getDescription();
-            if (desc != null) {
-                final Layout layout = desc.getLayout();
-                if (layout instanceof CustomLayoutConfiguration) {
-                    return (CustomLayoutConfiguration) layout;
-                }
-            }
-        }
-        return null;
-    }
-
-    /**
      * Returns the generic layout provider associated to the description of the {@link DDiagram} related to the given
      * part.
      * 
-     * @param container
+     * @param partToLayout
+     *            the part to be layouted.
      * @return the generic layout provider associated to the description of the {@link DDiagram} related to the given
      *         part. Null if no such element exists.
      */
-    private DefaultLayoutProvider getGenericLayoutProvider(final IGraphicalEditPart container) {
-        CustomLayoutConfiguration customLayoutConfiguration = getCustomLayoutConfiguration(container);
+    private DefaultLayoutProvider getGenericLayoutProvider(final IGraphicalEditPart partToLayout) {
+        CustomLayoutConfiguration customLayoutConfiguration = getLayoutConfiguration(partToLayout);
         if (customLayoutConfiguration != null) {
             CustomLayoutAlgorithm customLayoutAlgorithm = DiagramUIPlugin.getPlugin().getLayoutAlgorithms().get(customLayoutConfiguration.getId());
             if (customLayoutAlgorithm != null) {
-                return customLayoutAlgorithm.getLayoutAlgorithmInstance();
+                DefaultLayoutProvider layoutAlgorithmInstance = customLayoutAlgorithm.getLayoutAlgorithmInstance();
+                layoutAlgorithmInstance.setLayoutConfiguration(customLayoutConfiguration);
+                return layoutAlgorithmInstance;
             }
         }
         return null;
